[package]
name = "bevy-ws-server"
version = "0.2.1"
edition = "2021"

[dependencies]
bevy = { version = "0.12", default-features = false, features = ["multi-threaded"] }
async-net = "2.0.0"
futures = "0.3.29"
async-tungstenite = "0.23.0"
log = "0.4.20"
crossbeam-channel = "0.5.8"
async-channel = "2.1.0"
