[package]
name = "bevy_ws_server"
version = "0.2.1"
edition = "2021"

[dependencies]
bevy = { version = "0.12", default-features = false, features = ["multi-threaded"] }
async-net = "2.0.0"
futures = "0.3.29"
async-tungstenite = "0.24.0"
log = "0.4.20"
crossbeam-channel = "0.5.8"
async-channel = "2.1.0"
async-native-tls = "0.5.0"
smol = "2.0.0"
tungstenite = "0.21.0"
anyhow = "1.0.79"
